<!--
  Copyright 2025 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      https://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>
    <string name="app_name">Editor</string>

    <string name="file">File</string>
    <string name="newFile">New</string>
    <string name="open">Open…</string>
    <string name="save">Save</string>
    <string name="saveAs">Save As…</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>

    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="paste">Paste</string>
    <string name="menu">Menu</string>

    <string-array name="theme">
        <item>Light</item>
        <item>Dark</item>
        <item>Default</item>
    </string-array>
    <string name="message">This is modified</string>
    <string name="save0">New File after Saving</string>
    <string name="notSave0">New File without Saving</string>
    <string name="save1">Open File after Saving</string>
    <string name="notSave1">Open File without Saving</string>
    <string name="cancel">Cancel</string>
    <string name="untitled">Untitled</string>
    <string name="cannotOpen">Can not open</string>
    <string name="cannotSave">Can not save</string>
    <string name="copyright">© 2026 <a href="https://github.com/manabu-nakamura">Manabu Nakamura</a></string>
    <string name="ok">OK</string>
    <string name="modified">*%s</string>
    <string name="notModified">%s</string>
</resources>