<!--
  Copyright 2025 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      https://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="65dp"
        android:fillViewport="true">
        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:background="@android:color/transparent"
            android:paddingHorizontal="5dp"
            android:inputType="textMultiLine|textNoSuggestions" />
    </ScrollView>
    <com.google.android.material.dockedtoolbar.DockedToolbarLayout
        style="?dockedToolbarVibrantStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">
        <com.google.android.material.overflow.OverflowLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:focusable="false"
                android:layout_weight="1"
                android:onClick="undo"
                app:layout_overflowText="@string/undo"
                app:layout_overflowIcon="@drawable/outline_undo_24">
                <Button
                    style="?materialIconButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:tooltipText="@string/undo"
                    android:onClick="undo"
                    app:icon="@drawable/outline_undo_24" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:focusable="false"
                android:layout_weight="1"
                android:onClick="redo"
                app:layout_overflowText="@string/redo"
                app:layout_overflowIcon="@drawable/outline_redo_24">
                <Button
                    style="?materialIconButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:tooltipText="@string/redo"
                    android:onClick="redo"
                    app:icon="@drawable/outline_redo_24" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:focusable="false"
                android:layout_weight="1"
                android:onClick="paste"
                app:layout_overflowText="@string/paste"
                app:layout_overflowIcon="@drawable/outline_content_paste_24">
                <Button
                    style="?materialIconButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:tooltipText="@string/paste"
                    android:onClick="paste"
                    app:icon="@drawable/outline_content_paste_24" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:focusable="false"
                android:layout_weight="1"
                android:onClick="menu"
                app:layout_overflowText="@string/menu"
                app:layout_overflowIcon="@drawable/outline_menu_24">
                <Button
                    style="?materialIconButtonFilledStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:tooltipText="@string/menu"
                    android:onClick="menu"
                    app:icon="@drawable/outline_menu_24" />
            </FrameLayout>
        </com.google.android.material.overflow.OverflowLinearLayout>
    </com.google.android.material.dockedtoolbar.DockedToolbarLayout>
    <com.google.android.material.bottomappbar.BottomAppBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>